[package]
name = "cratographer"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"

# rust-analyzer integration
ra_ap_ide = "0.0"
ra_ap_ide_db = "0.0"
ra_ap_project_model = "0.0"
ra_ap_vfs = "0.0"
ra_ap_paths = "0.0"
